--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Poppins:700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:100,400,700&display=swap"
       rel="stylesheet"
     />
-    <title>React Typescript</title>
   </head>
 
   <body>
